--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "parcel src/index.html --open",
+    "build": "parcel build src/index.html"
   },
   "devDependencies": {
+    "@types/parcel-env": "^0.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "parcel-bundler": "^1.12.4",
