--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "parcel-bundler": "^1.12.4",
+    "postcss": "^7.0.0",
+    "postcss-modules": "^3.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "typescript-plugin-css-modules": "^3.0.1"
   }
 }
