--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "build": "parcel build src/index.html"
   },
   "devDependencies": {
-    "@types/parcel-env": "^0.0.0",
+    "@types/parcel-env": "^0.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "parcel-bundler": "^1.12.4",
-    "postcss": "^7.0.0",
-    "postcss-modules": "^3.2.2",
+    "parcel": "^2.0.0-rc.0",
+    "postcss": "^8.3.6",
+    "postcss-modules": "^4.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "typescript": "^4.1.3",
