--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "scripts": {
     "start": "parcel src/index.html --open",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --public-url ./",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/parcel-env": "^0.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.2.3",
     "parcel": "^2.0.0-rc.0",
     "postcss": "^8.3.6",
     "postcss-modules": "^4.2.2",
@@ -14,5 +17,6 @@
     "react-dom": "^17.0.1",
     "typescript": "^4.1.3",
     "typescript-plugin-css-modules": "^3.0.1"
-  }
+  },
+  "homepage": "http://alfrdmalr.github.io/calculoaf"
 }
