--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "gh-pages": "^3.2.3",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.0",
     "postcss": "^8.3.6",
     "postcss-modules": "^4.2.2",
     "react": "^17.0.1",
