--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "scripts": {
-    "start": "parcel src/index.html --open",
-    "build": "parcel build src/index.html --public-url ./",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d dist"
+    "start": "npm run serve",
+    "serve": "node serve.js",
+    "build": "node build.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "format": "prettier --write ."
   },
   "devDependencies": {
-    "@types/parcel-env": "^0.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "esbuild": "^0.15.16",
+    "esbuild-css-modules-plugin": "^2.6.2",
     "gh-pages": "^3.2.3",
-    "parcel": "^2.0.0-rc.0",
     "postcss": "^8.3.6",
     "postcss-modules": "^4.2.2",
+    "prettier": "^2.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "typescript": "^4.1.3",
