--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,6 @@
       }
     ]
   },
-  "lib": [
-    "dom",
-    "dom.iterable",
-    "esnext"
-  ],
+  "lib": ["dom", "dom.iterable", "esnext"],
   "include": ["src"]
-
 }
